Add slack action

--- a/.github/workflows/notify-slack.yml
+++ b/.github/workflows/notify-slack.yml
@@ -23,6 +23,22 @@ jobs:
           SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
         with:
           channel-id: 'C01KYA95GFK'
-          slack-message: "GitHub build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
+          payload: |
+            {
+                "text": "TEST",
+                "attachments": [
+                {
+                    "pretext": "test",
+                    "color": "dbab09",
+                    "fields": [
+                    {
+                        "title": "Status",
+                        "short": true,
+                        "value": "In Progress"
+                    }
+                    ]
+                }
+                ]
+            }
         uses: slackapi/slack-github-action@v1.25.0
 
