--- a/.github/workflows/notify-slack.yml
+++ b/.github/workflows/notify-slack.yml
@@ -21,6 +21,6 @@ jobs:
           channel-id: 'C01KYA95GFK'
           payload: |
             {
-                "text": "${{ github.event.pull_request }}"
+                "text": "${{ github.event.pull_request.html_url }}"
             }
         uses: slackapi/slack-github-action@v1.25.0
